@@ -8,6 +8,7 @@ $Id$
 	Fix for checking for DES
 	Bug fix in using makemsg when no curses window present
 	$owl::auth now works
+	Use new function to delete zephyr subs from file
 
 2.0.4-pre-1
 	Make command line option -n actualy work
